fixed aboutme styling on mobile device

--- a/codeV2/services/static/styles/indexStyles.css
+++ b/codeV2/services/static/styles/indexStyles.css
@@ -398,6 +398,7 @@ color: #FFFFFF;
 .Info h3{
 font-family: 'Roboto Mono';
 font-style: normal;
+height: auto;
 font-weight: 400;
 font-size: 24px;
 line-height: 32px;
@@ -405,7 +406,7 @@ color: #FFFFFF;
 }
 
 .mainSkills, .tools, .Experience, .Languages {
-    width: 20%;
+    width: auto;
     height: 333px;    
     }
 
